fix dark mode

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -84,14 +84,20 @@
     --md-typeset-mark-color: #afaf0060
 }
 
+
+
 [data-md-color-scheme="slate"] {
     /* --md-default-fg-color: hsla(var(--md-hue), 15%, 90%, 1); */
-    --md-default-bg-color: hsla(var(--md-hue), 0%, 7%, 0);
+    --md-default-bg-color: hsla(var(--md-hue), 0%, 7%, 1);
 }
 [data-md-color-primary=black] .md-header {
-    background-color:  hsla(var(--md-hue), 0%, 7%, 0);
+    background-color:  hsla(var(--md-hue), 0%, 7%, 1);
 }
-    
+
+[data-md-color-primary=black] .md-tabs {
+    background-color:  hsla(var(--md-hue), 0%, 7%, 1);
+}
+
 /* dark-mode for iframe (google map) */
 
 [data-md-color-scheme="default"] iframe[src$="#only-dark"],
